force-app/main/default/objects/Quote_Product__c/Quote_Product__c.object-meta.xml
<CustomObject>
    <label>Quote Product</label>
    <nameField>
        <displayFormat>QL{00000000}</displayFormat>
        <label>Quote Product Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>