force-app/main/default/objects/Quote_Product__c/fields/Accessories_other__c.field-meta.xml
<CustomField>
    <fullName>Accessories_other__c</fullName>
    <label>Accessories/other($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>