force-app/main/default/objects/Quote_Product__c/fields/Chipset_Platform__c.field-meta.xml
<CustomField>
    <fullName>Chipset_Platform__c</fullName>
    <label>Chipset Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>