force-app/main/default/objects/Quote_Product__c/fields/Commission_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Commission_Proportion__c</fullName>
    <label>Commission(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>