force-app/main/default/objects/Quote_Product__c/fields/Content_Discount__c.field-meta.xml
<CustomField>
    <fullName>Content_Discount__c</fullName>
    <label>Content(Discount)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>