force-app/main/default/objects/Quote_Product__c/fields/COOP__c.field-meta.xml
<CustomField>
    <fullName>COOP__c</fullName>
    <label>COOP(Delete)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>