force-app/main/default/objects/Quote_Product__c/fields/Customer_Model_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Model Product</label>
    <referenceTo>Customer_Model_Product__c</referenceTo>
    <relationshipLabel>Quote Product</relationshipLabel>
    <relationshipName>Quote_ProductToCustomerModel</relationshipName>
    <type>Lookup</type>
</CustomField>