force-app/main/default/objects/Quote_Product__c/fields/Customer_Request_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Price__c</fullName>
    <label>Customer Request Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>