force-app/main/default/objects/Quote_Product__c/fields/Customer_s_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Model__c</fullName>
    <label>Customer&apos;s Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>