force-app/main/default/objects/Quote_Product__c/fields/Delivery_Form__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Form__c</fullName>
    <label>Delivery Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CKD</fullName>
            </value>
            <value>
                <fullName>CBU</fullName>
            </value>
            <value>
                <fullName>CKD-DK</fullName>
            </value>
            <value>
                <fullName>CKD-JG</fullName>
            </value>
            <value>
                <fullName>CKD-JG &amp; N-RC</fullName>
            </value>
            <value>
                <fullName>CKD-OC</fullName>
            </value>
            <value>
                <fullName>MCKD-1 &amp; N-RC</fullName>
            </value>
            <value>
                <fullName>MCKD-3A</fullName>
            </value>
            <value>
                <fullName>MCKD-3A &amp; N-DK</fullName>
            </value>
            <value>
                <fullName>MCKD-3A &amp; N-OC</fullName>
            </value>
            <value>
                <fullName>SKD</fullName>
            </value>
            <value>
                <fullName>SKD（Motherboard CKD）</fullName>
            </value>
            <value>
                <fullName>SKD-1 &amp; N-RC</fullName>
            </value>
            <value>
                <fullName>SKDP</fullName>
            </value>
            <value>
                <fullName>Motherboard CKD</fullName>
            </value>
            <value>
                <fullName>Motherboard SKD</fullName>
            </value>
            <value>
                <fullName>Motherboard &amp; Module CKD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>