force-app/main/default/objects/Quote_Product__c/fields/Delivery_Form_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Form_Proportion__c</fullName>
    <label>Delivery Form(%) delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>