force-app/main/default/objects/Quote_Product__c/fields/Estimatied_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimatied_Delivery_Date__c</fullName>
    <label>Estimatied Delivery Date</label>
    <type>Date</type>
</CustomField>