force-app/main/default/objects/Quote_Product__c/fields/First_Order_Qty_Forecast__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Qty_Forecast__c</fullName>
    <label>First Order Qty Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>