force-app/main/default/objects/Quote_Product__c/fields/In_Store_or_Online__c.field-meta.xml
<CustomField>
    <fullName>In_Store_or_Online__c</fullName>
    <label>In-Store or Online</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-line</fullName>
            </value>
            <value>
                <fullName>In-Store &amp; Online</fullName>
            </value>
            <value>
                <fullName>In-Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>