force-app/main/default/objects/Quote_Product__c/fields/Lowest_Price__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Price__c</fullName>
    <label>Lowest Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>