force-app/main/default/objects/Quote_Product__c/fields/MAP__c.field-meta.xml
<CustomField>
    <fullName>MAP__c</fullName>
    <label>MAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>