force-app/main/default/objects/Quote_Product__c/fields/Marketing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Fees__c</fullName>
    <label>Marketing Fees(Delete)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>