force-app/main/default/objects/Quote_Product__c/fields/Need_to_Provide_EXW__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Provide_EXW__c</fullName>
    <label>Need to Provide EXW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>