force-app/main/default/objects/Quote_Product__c/fields/Net_Funding_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Net_Funding_Per_Unit__c</fullName>
    <label>Net Funding Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>