force-app/main/default/objects/Quote_Product__c/fields/Offer_Policy__c.field-meta.xml
<CustomField>
    <fullName>Offer_Policy__c</fullName>
    <label>Offer Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>