force-app/main/default/objects/Quote_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Quote Product</relationshipLabel>
    <relationshipName>QuoteProductToOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>