force-app/main/default/objects/Quote_Product__c/fields/Other_Support_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Other_Support_Proportion__c</fullName>
    <label>Other Support(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>