force-app/main/default/objects/Quote_Product__c/fields/Packaging_Fee__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Fee__c</fullName>
    <label>Packaging Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>