force-app/main/default/objects/Quote_Product__c/fields/Pricebook_Entry__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook Entry</label>
    <referenceTo>Pricebook_Entry__c</referenceTo>
    <relationshipLabel>Quote Product</relationshipLabel>
    <relationshipName>Quote_ProductToEntry</relationshipName>
    <type>Lookup</type>
</CustomField>