force-app/main/default/objects/Quote_Product__c/fields/Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Formula__c</fullName>
    <formula>IF( ISBLANK(Product__c) , &apos;&apos;, Product__r.Name) + IF( ISBLANK(Customer_Model_Product__c ) , &apos;&apos;, Customer_Model_Product__r.Name)</formula>
    <label>Product Name Formula</label>
    <type>Text</type>
</CustomField>