force-app/main/default/objects/Quote_Product__c/fields/Promo_Type__c.field-meta.xml
<CustomField>
    <fullName>Promo_Type__c</fullName>
    <label>Promo Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>