force-app/main/default/objects/Quote_Product__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion(Delete)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>