force-app/main/default/objects/Quote_Product__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <label>Quote Name</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Product</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>