force-app/main/default/objects/Quote_Product__c/fields/Quote_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Opportunity_ID__c</fullName>
    <formula>Quote_Name__r.Opportunity_Name__c</formula>
    <label>Quote Opportunity ID</label>
    <type>Text</type>
</CustomField>