force-app/main/default/objects/Quote_Product__c/fields/Reserved_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Proportion__c</fullName>
    <label>Reserved (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>