force-app/main/default/objects/Quote_Product__c/fields/Royalties__c.field-meta.xml
<CustomField>
    <fullName>Royalties__c</fullName>
    <label>Royalties($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>