force-app/main/default/objects/Quote_Product__c/fields/Sales_of_Consumables_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sales_of_Consumables_Fee__c</fullName>
    <label>Sales of Consumables Fee($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>