force-app/main/default/objects/Quote_Product__c/fields/Screen_Model__c.field-meta.xml
<CustomField>
    <fullName>Screen_Model__c</fullName>
    <label>Screen Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>