force-app/main/default/objects/Quote_Product__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>