force-app/main/default/objects/Quote_Product__c/fields/Specification_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Specification_Requirements__c</fullName>
    <label>Specification Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>