force-app/main/default/objects/Quote_Product__c/fields/Total_Cost_M__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_M__c</fullName>
    <formula>Cost__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost(M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>