force-app/main/default/objects/Quote_Product__c/fields/Total_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sell_Price__c</fullName>
    <formula>Quantity__c *  Unit_Sell_In_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>