force-app/main/default/objects/Quote_Product__c/fields/Type_Feature__c.field-meta.xml
<CustomField>
    <fullName>Type_Feature__c</fullName>
    <label>Type/Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>