force-app/main/default/objects/Quote_Product__c/fields/Unit_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Price__c</fullName>
    <formula>IF( Lowest_Price__c &gt; 0, Lowest_Price__c , Cost__c) + 
Accessories_other__c  +  Royalties__c +  Other_Fee__c +  Delivery_Form_Fee__c  +  Packaging_Fee__c +  Color_Box_Fee__c + POS_Fee__c +  Sales_of_Consumables_Fee__c + Other_Support__c + Cost__c * (  Accessories_other_Proportion__c +  Sales_of_Consumables_Proportion__c +  Commission_Proportion__c + Market_Fee_Proportion__c + After_sales_Fee_Proportion__c + Reserved_Proportion__c + Other_Support_Proportion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>