force-app/main/default/objects/Quote_Product__c/fields/Unit_Sell_In_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sell_In_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>