force-app/main/default/objects/Quote_Product__c/fields/Yearly_Qty_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Qty_Forecast__c</fullName>
    <label>Yearly Qty Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>