force-app/main/default/objects/Quote_Product__c/recordTypes/Quote_Product_Malaysia.recordType-meta.xml
<RecordType>
    <fullName>Quote_Product_Malaysia</fullName>
    <active>true</active>
    <label>Quote Product/Malaysia</label>
</RecordType>