force-app/main/default/objects/Quote_Product__c/recordTypes/Quote_Product_Sales_Department_TV.recordType-meta.xml
<RecordType>
    <fullName>Quote_Product_Sales_Department_TV</fullName>
    <active>true</active>
    <label>Quote Product/Sales Department(TV)</label>
</RecordType>