force-app/main/default/objects/Quote_Product__c/recordTypes/Quote_Product_USA_CE.recordType-meta.xml
<RecordType>
    <fullName>Quote_Product_USA_CE</fullName>
    <active>true</active>
    <label>Quote Product/USA(CE)</label>
</RecordType>