force-app/main/default/objects/Quote_Product__c/recordTypes/Quote_Product_USA_HA.recordType-meta.xml
<RecordType>
    <fullName>Quote_Product_USA_HA</fullName>
    <active>true</active>
    <label>Quote Product/USA(HA)</label>
</RecordType>