force-app/main/default/objects/Quote_Product__c/validationRules/AccessoriesMustChooseOneInputForm.validationRule-meta.xml
<ValidationRule>
    <fullName>AccessoriesMustChooseOneInputForm</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL( Accessories_other_Proportion__c ) &amp;&amp;  !ISNULL( Accessories_other__c )</errorConditionFormula>
    <errorMessage>Accessories/other, only one input form can be selected.</errorMessage>
</ValidationRule>