force-app/main/default/objects/Quote_Product__c/validationRules/ConsumablesFeeMustChooseOneInputForm.validationRule-meta.xml
<ValidationRule>
    <fullName>ConsumablesFeeMustChooseOneInputForm</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL( Sales_of_Consumables_Proportion__c ) &amp;&amp; ! ISNULL( Sales_of_Consumables_Fee__c )</errorConditionFormula>
    <errorMessage>Sales of Consumables Fee, only one input form can be selected</errorMessage>
</ValidationRule>