force-app/main/default/objects/Quote_Product__c/validationRules/CurrencyTypeMustSameAsQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>CurrencyTypeMustSameAsQuote</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Quote_Name__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>The currency type must be the same as that in the quote.</errorMessage>
</ValidationRule>