force-app/main/default/objects/Quote_Product__c/validationRules/OnlyProductForAskCanBeEdited.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyProductForAskCanBeEdited</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( TEXT(Need_to_Provide_EXW__c) == &apos;NO&apos; , CONTAINS( RecordType.DeveloperName , &apos;Sales_Department&apos;) ,  !ISBLANK( Product__c ), Product__c &lt;&gt;  Pricebook_Entry__r.Product__c ) ,  true, false)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Only inquiry products can be edited!</errorMessage>
</ValidationRule>