force-app/main/default/objects/Quote_Product__c/validationRules/OnlyProductForAskCanEditCost.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyProductForAskCanEditCost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Need_to_Provide_EXW__c , &apos;NO&apos;) ,  ISCHANGED( Cost__c )  )</errorConditionFormula>
    <errorDisplayField>Cost__c</errorDisplayField>
    <errorMessage>Only inquiry product can edit Cost</errorMessage>
</ValidationRule>