force-app/main/default/objects/Quote_Product__c/validationRules/OtherSupportMustChooseOneInputForm.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherSupportMustChooseOneInputForm</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL( Other_Support__c ) &amp;&amp; ! ISNULL( Other_Support_Proportion__c )</errorConditionFormula>
    <errorMessage>Other Support, only one input form can be selected</errorMessage>
</ValidationRule>