force-app/main/default/objects/Quote_Product__c/validationRules/PriceBookMustSameAsQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>PriceBookMustSameAsQuote</fullName>
    <active>true</active>
    <errorConditionFormula>Pricebook_Entry__r.Price_Book__c &lt;&gt;  Quote_Name__r.Pricebook__c</errorConditionFormula>
    <errorMessage>The quote product is no longer in the customer&apos;s price book.</errorMessage>
</ValidationRule>