force-app/main/default/objects/Quote_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Customer_Model_Product__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Pricebook_Entry__c</columns>
    <columns>Unit_Sell_In_Price__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>